--- a/neural-network/master.ltx
+++ b/neural-network/master.ltx
@@ -802,10 +802,12 @@
           よって1度の内部状態変化でエネルギー関数の値が減少もしくは変らないことを示せばよい。
 
           まず\cref{eq:binary hopfield energy}をある$k \; (k = 1, 2, \cdots, n)$を用いて
-          \begin{equation}
-            E = -\frac{1}{2} \sum_{i \neq k} \sum_{j \neq k} w_{i, j} x_i x_j + \sum_{i \neq k} \theta_i x_i
+          \begin{align}
+            E &= -\frac{1}{2} \sum_{i=1}^n \sum_{j=1}^n w_{i, j} x_i x_j + \sum_{i=1}^n \theta_i x_i \\
+              &= -\frac{1}{2} \sum_{i \neq k} \sum_{j \neq k} w_{i, j} x_i x_j + \sum_{i \neq k} \theta_i x_i
                 -\frac{1}{2} x_k \sum_{i=1}^n w_{i, k} x_i - \frac{1}{2} x_k \sum_{j=1}^n w_{k, j} x_j + \theta_k x_k
-          \end{equation}
+          \end{align}
+          % TODO: ここで w_ii = 0 を利用
           と変形すると$w_{i, j} = w_{j, i}$であるため
           \begin{equation}
             E = -\frac{1}{2} \sum_{i \neq k} \sum_{j \neq k} w_{i, j} x_i x_j + \sum_{i \neq k} \theta_i x_i
