--- a/neural-network/sources/sections/competitive-neural-network.ltx
+++ b/neural-network/sources/sections/competitive-neural-network.ltx
@@ -13,6 +13,9 @@
 
     \subsection{生体のトポロジカルマッピングのモデル}
       % TODO: p81-p85
+      % willshaw-malsharg のモデルでは興奮性と抑制性の結合は学習しない
+      % トポロジカルマッピング -> 任意の次元上での遠い近いの関係を保持したまま別の(ニューロンの配置による)次元に写像する
+      %                             -> 同相写像 ?
 
     \subsection{コホーネンのモデル}
       % TODO: p85-p96
