--- a/neural-network/sources/sections/interconnected-neural-network.ltx
+++ b/neural-network/sources/sections/interconnected-neural-network.ltx
@@ -14,7 +14,7 @@
       また、階層型ニューラルネットワークは一般に時系列を扱わないのに対して、相互結合型ニューラルネットワークは時刻の経過によって出力を計算する。
 
       相互結合型ニューラルネットワークには外界から入力を受け取るユニット$I$、外界へ出力を出すユニット$O$、それ以外のユニット$H$が存在する。
-      また必ずしも$I \cup O = \phi$であるとは限らない。
+      また必ずしも$I \cap O = \phi$であるとは限らない。
 
     \subsection{連想記憶}
       人間における記憶の検索は連想によって行なわれているとされる。
@@ -23,6 +23,7 @@
       \begin{dfn}[連想記憶(associative memory)]
         入力パターンの集合$I$、出力パターンの集合$O$に対してニューラルネットワーク$n$が写像$n \colon I \to O$として定まることである。
         また$I = O$であるような連想記憶を自己相関連想記憶(autoassociative memory)、$I \neq O$であるような連想記憶を相互相関連想記憶(heteroassociative memory)という。
+        % TODO: ここの単語の定義ちと危ういぞ
         % TODO: ほんま? 確率は?
       \end{dfn}
       代表的な相互結合型ニューラルネットワークであるホップフィールドモデルは最適化問題にも用いられている。
@@ -30,6 +31,7 @@
     \subsection{ホップフィールドモデル}
       %TODO: イジングモデルとの関係
       \subsubsection{ホップフィールドモデル(Hopfield model)}
+        % TODO: ホップフィールドモデルは I = O だったはず (by せんせ)
         ホップフィールドモデルはアメリカの物理学者 J.J. Hopfield が導入したニューラルネットワークである。
         以下にホップフィールドモデルの特徴を示す。
         \begin{itemize}
@@ -151,6 +153,7 @@
           w_{i, j} = \sum^P_{s=1} x^s_i x^s_j \qquad i, j = 1, 2, \cdots, n
         \end{equation}
         である。
+        % TODO: これ相関学習 -> これヘブの仮説の拡張といえる -> 両方発火してると重み強くなるよね
         これは、この式をエネルギー関数に代入することで
         \begin{align}
           E &= -\frac{1}{2} \sum_{i=1}^n \sum_{j=1}^n \sum^P_{s=1} x^s_i x^s_j x_i x_j \\
@@ -162,12 +165,17 @@
         となり、$x^s_i$や$x_i$が$-1$か$1$しかとらないことから、エネルギー関数が各$\vect{x}^s$を極小値とする2次関数の和となっていることがわかる。
         パターンの数$P$が少ない等いくつかの制約の上ではこのエネルギー関数が任意の$\vect{x}^s$を極小値とすることが直感的にわかる。
         また、$\vect{x}^s$と$-\vect{x}^s$はエネルギーの値が同じであるため$\vect{x}^s$を記銘することと$-\vect{x}^s$を記銘することは同じ意味を持つ。
+        % TODO: 相関学習では直交性が高ければ記憶容量が増す
+        %         -> つまり最大なら n 次元空間上なら n 個記憶できる
+        %         -> また記憶容量を増やす方法としてスパースコーディングがある
+        %               -> ネットワーク上で発火するニューロンの数を減らす(?)
 
         なお、大きな$n$似たいして記銘ベクトルをランダムに選ぶことで$\{-1, 1\}$の2値ホップフィールドモデルの記憶容量は
         \begin{equation}
           \frac{n}{2 \log_2 n}
         \end{equation}
         で近似できることが示されている。
+        % TODO: 各パターンが 1/2 の確率で 1 となるとしてパターンの分布を計算して、記憶容量を計算した
 
       \subsubsection{連続値ホップフィールドモデル}
         本節では連続値ホップフィールドモデルについて考える。
@@ -179,7 +187,8 @@
         \end{gather}
         で表わされる。
         ここで$i = 1, 2, \cdots, n$であり、$f_i(u)$は非線形な連続単調増加関数である。
-        また、$\tau$はニューロンの内部状態における時定数である。 % TODO: 時定数ってなんじゃい
+        また、$\tau$はニューロンの内部状態における時定数である
+        % TODO: 時定数 -> コンデンサとかで電荷のたまりかたや放出のしかたのはやさ(?)を表わす -> 傾きてきな?
 
         \cref{eq:continuous hopfield model 1}の第1項目は$u_i(t)$を指数関数的に減少させることで、$u_i(t)$の発散を抑制し平衡値へと近づける効果がある。
         第1項を除けば\cref{eq:continuous hopfield model 1}は\cref{eq:binary hopfield model 1}と同等の式とみることができ、膜電位に対応する値が正であれば$u_i(t)$は時間的に増加させる、負であれば$u_i(t)$は時間的に減少させる、$0$であれば$u_i(t)$の変化に寄与しないという効果がある。
@@ -240,6 +249,7 @@
         よって2値ホップフィールドモデルは組み合わせ最適化問題を解きうるモデルであるといえる。
         本節ではNP困難である組み合わせ最適化問題の中で代表的な問題であるTSPを解くことを考える。
         % TODO: p62-p65
+        % ここで使う目的関数は重みの対称性を保てるように順方向と逆方向を2重に足してる
 
       \subsubsection{連続値ホップフィールドモデルの改良}
         % TODO: p65-p66
@@ -248,13 +258,22 @@
       % 担当3始め
       \subsubsection{ボルツマンマシンの動作}
         % TODO: p66-p73
+        % TODO: 状態alphaをとる確率がP_alphaって解釈で問題なさそう
+        % ニューロン i が1になる確率はシグモイド関数
+        % ボルツマンマシンは外部から与えられた確率分布を学習する
 
       % TODO: 担当3終り
       \subsubsection{ボルツマンマシンの学習}
         % TODO: p73-p78
+        %   ボルツマンマシンの学習では平衡状態を維持して、学習に必要な期待値を計算する
+        %   Delta w は kullback divergence で与えられる確率分布とボルツマンマシンの確率分布の差を求めてそれを最小化するように計算される
+        %     -> Kullback divergence を重みで偏微分して勾配降下
+        %     -> 研究室の introduction to the theory of neural network って本(日本語訳はちょっと...)がヨシ
+        %   ボルツマンマシンの学習をプログラムで書くと4重ループになる
 
       \subsubsection{ボルツマンマシンの特徴}
         % TODO: p78-p79
+        % ボルツマンマシンは生成モデルを学習するものの1つ
 
 \end{document}
 
