--- a/neural-network/sources/sections/layered-neural-network.ltx
+++ b/neural-network/sources/sections/layered-neural-network.ltx
@@ -206,6 +206,7 @@
           %TODO
         \end{thm}
         \begin{proof}[\cref{thm:perceptron convergence theorem}の証明]
+          % TODO: delta, M の定義を教科書にあわせればもっときれいに示せるよ
           正しい識別を与えるシナプス結合荷重のうち任意の$\vect{o} \in F^+ \cup F^-$に対して
           \begin{equation}
             \vect{o} \cdot \vect{w}^* \neq \vect{0}
