--- a/neural-network/sources/sections/what-is-the-neural-network.ltx
+++ b/neural-network/sources/sections/what-is-the-neural-network.ltx
@@ -58,6 +58,8 @@
 
         発火している時間はだいだい同じであり、1度しきい値を越えれば自動的に膜電位が増減するため同じような膜電位の増減のしかたをする。
         また、発火している最中に重ねて発火するようなことは起きないため発火すればどの神経細胞も同じような膜電位の増減のしかたをする。
+        膜電位がしきい値を越えなかった場合も時間が経てば、膜電位は静止電位まで下がる。
+
         この膜電位の増減は細胞膜上をつたわる。
         この膜電位の上昇が軸索をとおりシナプスへ伝わることで、シナプスが別の神経細胞へ信号を伝える。
         シナプスが他の神経細胞へ信号を伝える際、シナプスは伝達物質を用いるが、これには興奮性の物質と抑制性の物質がある。
@@ -70,8 +72,10 @@
         % TODO: 軸索はとことどころ絶縁体で覆われていて、これにより信号が早く伝わるらしい
 
     \subsection{神経細胞のモデル}
+      % TODO: sigmoid 関数は計算負荷が高い -> ReLU が出てくる
     \subsection{シナプスの可塑性}
-    % TODO: ヘブの原理は実際に起こっている -> SNNの学習はこれを用いる
+      % TODO: ヘブの原理は実際に起こっている -> SNNの学習はこれを用いる
+      % 可塑性 -> 可塑するってこと
     \subsection{ニューラルネットワークの分類}
       \subsubsection{階層型ニューラルネットワーク}
       \subsubsection{相互結合型ニューラルネットワーク}
