write genetic-alrogrithm

--- a/neural-network/sources/master.ltx
+++ b/neural-network/sources/master.ltx
@@ -29,5 +29,7 @@
 
   \subimport{./sources/sections/}{significance-of-neural-network.ltx}
 
+  \subimport{./sources/sections/}{genetic-algorithm.ltx}
+
 \end{document}
 
