--- a/neural-network/sources/theorems/Jensen-s-inequality.ltx
+++ b/neural-network/sources/theorems/Jensen-s-inequality.ltx
@@ -20,6 +20,7 @@
   \begin{proof}[イェンゼンの不等式の証明]
     数学的帰納法によって示す。
     \begin{itemize}
+      \item $n = 1$のときは自明である。
       \item $n = 2$のとき、イェインゼンの不等式は凸関数の定義そのものである。
       \item $n = k$のときにイェンゼンの不等式が成立すると仮定する。
         ここで$A = \sum_{i=1}^k \lambda_i$と置くと
